frontend-networkpolicies.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-processor
  namespace: calc-frontend  
spec:
  podSelector:
    matchLabels:
      app: processor
  ingress:
  - ports:
    - port: 80   
    from: []  
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ui
  namespace: calc-frontend  
spec:
  podSelector:
    matchLabels:
      app: ui
  ingress:
  - ports:
    - port: 80   
    from: []
